--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-sm-6">
                 <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                        src="http://www.openstreetmap.org/export/embed.html?bbox=-71.0913920402527%2C42.36207574165209%2C-71.08774423599245%2C42.36398228923947&layer=mapnik&marker=42.36304%2C-71.08873"
+                        src="https://www.openstreetmap.org/export/embed.html?bbox=-71.0913920402527%2C42.36207574165209%2C-71.08774423599245%2C42.36398228923947&layer=mapnik&marker=42.36304%2C-71.08873"
                         style="border: 1px solid black"></iframe>
                 <br/>
                 <small>
