--- a/_sass/_agency.scss
+++ b/_sass/_agency.scss
@@ -1,4 +1,4 @@
-$primary-color: #f45820;
+@import "utilities";
 
 #morrislogo {
   margin: 0;
@@ -178,16 +178,7 @@ h6 {
   background-color: #222;
 }
 
-@mixin color_white_back_border_red() {
-  color: white;
-  background-color: #d6400b;
-  border-color: #cd3e0a;
-}
 
-@mixin back_border_primary() {
-  background-color: $primary-color;
-  border-color: $primary-color;
-}
 
 .btn-primary {
   color: white;
@@ -462,500 +453,23 @@ section {
   text-transform: none;
 }
 
-#publications {
+@import "publications";
 
-  .publications-item {
-    margin: 0 0 15px;
-    right: 0;
-  }
+@import "timeline";
 
-  .publications-item .publications-link {
-    display: block;
-    position: relative;
-    max-width: 400px;
-    margin: 0 auto;
-  }
+@import "clients";
 
-  .publications-item .publications-link .publications-hover {
-    background: rgba(244, 88, 32, 0.9);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: all ease 0.5s;
-    -webkit-transition: all ease 0.5s;
-    -moz-transition: all ease 0.5s;
-  }
+@import "contact";
 
-  .publications-item .publications-link .publications-hover:hover {
-    opacity: 1;
-  }
+@import "footer";
 
-  .publications-item .publications-link .publications-hover .publications-hover-content {
-    position: absolute;
-    width: 100%;
-    height: 20px;
-    font-size: 20px;
-    text-align: center;
-    top: 50%;
-    margin-top: -12px;
-    color: white;
-  }
-
-  .publications-item .publications-link .publications-hover .publications-hover-content i {
-    margin-top: -12px;
-  }
-
-  .publications-item .publications-link .publications-hover .publications-hover-content h3,
-  .publications-item .publications-link .publications-hover .publications-hover-content h4 {
-    margin: 0;
-  }
-
-  .publications-item .publications-caption {
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: white;
-    text-align: center;
-    padding: 25px;
-
-    h4 {
-      text-transform: none;
-      margin: 0;
-    }
-
-    p {
-      font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-style: italic;
-      font-size: 16px;
-      margin: 0;
-    }
-  }
-
-  * {
-    z-index: 2;
-  }
-}
-
-@media (min-width: 767px) {
-  #publications .publications-item {
-    margin: 0 0 30px;
-  }
-}
-
-.timeline {
-  list-style: none;
-  padding: 0;
-  position: relative;
-
-  &:before {
-    top: 0;
-  bottom: 0;
-  position: absolute;
-  content: "";
-  width: 2px;
-  background-color: #f1f1f1;
-  left: 40px;
-  margin-left: -1.5px;
-  }
-
-  > li {
-    margin-bottom: 50px;
-    position: relative;
-    min-height: 50px;
-
-    &:before, &:after {
-      content: " ";
-      display: table;
-    }
-
-    &:after {
-        clear: both;
-    }
-
-    .timeline-panel {
-      width: 100%;
-      float: right;
-      padding: 0 20px 0 100px;
-      position: relative;
-      text-align: left;
-
-      &:before {
-        border-left-width: 0;
-        border-right-width: 15px;
-        left: -15px;
-        right: auto;
-      }
-
-      &:after {
-        border-left-width: 0;
-        border-right-width: 14px;
-        left: -14px;
-        right: auto;
-      }
-    }
-
-    .timeline-image {
-      left: 0;
-      margin-left: 0;
-      width: 80px;
-      height: 80px;
-      position: absolute;
-      z-index: 100;
-      background-color: $primary-color;
-      color: white;
-      border-radius: 100%;
-      border: 7px solid #f1f1f1;
-      text-align: center;
-
-      h4 {
-        font-size: 10px;
-        margin-top: 12px;
-        line-height: 14px;
-      }
-    }
-
-    &.timeline-inverted > .timeline-panel {
-      float: right;
-      text-align: left;
-      padding: 0 20px 0 100px;
-
-      &:before {
-        border-left-width: 0;
-        border-right-width: 15px;
-        left: -15px;
-        right: auto;
-      }
-
-      &:after {
-        border-left-width: 0;
-        border-right-width: 14px;
-        left: -14px;
-        right: auto;
-      }
-    }
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  .timeline-heading {
-    h4 {
-      margin-top: 0;
-      color: inherit;
-
-      .subheading {
-        text-transform: none;
-      }
-    }
-  }
-
-  .timeline-body {
-    & > p, & > ul {
-      margin-bottom: 0;
-    }
-  }
-}
-
-@media (min-width: 768px) {
-  .timeline {
-    :before {
-      left: 50%;
-    }
-
-    > li {
-      margin-bottom: 100px;
-      min-height: 100px;
-
-      .timeline-panel {
-        width: 41%;
-        float: left;
-        padding: 0 20px 20px 30px;
-        text-align: right;
-      }
-
-      .timeline-image {
-        width: 100px;
-        height: 100px;
-        left: 50%;
-        margin-left: -50px;
-
-        h4 {
-          font-size: 13px;
-          margin-top: 16px;
-          line-height: 18px;
-        }
-      }
-
-      &.timeline-inverted > .timeline-panel {
-        float: right;
-        text-align: left;
-        padding: 0 30px 20px 20px;
-      }
-    }
-  }
-}
-
-@media (min-width: 992px) {
-  .timeline > li {
-    min-height: 150px;
-  }
-  .timeline > li .timeline-panel {
-    padding: 0 20px 20px;
-  }
-  .timeline > li .timeline-image {
-    width: 150px;
-    height: 150px;
-    margin-left: -75px;
-  }
-  .timeline > li .timeline-image h4 {
-    font-size: 18px;
-    margin-top: 30px;
-    line-height: 26px;
-  }
-  .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 20px 20px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .timeline > li {
-    min-height: 170px;
-  }
-  .timeline > li .timeline-panel {
-    padding: 0 20px 20px 100px;
-  }
-  .timeline > li .timeline-image {
-    width: 170px;
-    height: 170px;
-    margin-left: -85px;
-  }
-  .timeline > li .timeline-image h4 {
-    margin-top: 40px;
-  }
-  .timeline > li.timeline-inverted > .timeline-panel {
-    padding: 0 100px 20px 20px;
-  }
-}
-
-.team-member {
-  text-align: center;
-  margin-bottom: 50px;
-
-  img {
-    margin: 0 auto;
-    border: 7px solid white;
-  }
-
-  p {
-    margin-top: 0;
-  }
-}
-
-aside.clients {
-  background-color: #222;
-
-  img {
-    margin: 50px auto;
-  }
-}
-
-section#contact {
-  background-color: #222;
-  background-size: cover;
-  background-image: url('../img/ccbr.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-
-  .section-heading {
-    color: white;
-  }
-
-  .form-group {
-    margin-bottom: 25px;
-  }
-
-  .form-group input, .form-group textarea {
-    padding: 20px;
-  }
-
-  .form-group input.form-control {
-    height: auto;
-  }
-
-  .form-group textarea.form-control {
-    height: 236px;
-  }
-
-  .form-control:focus {
-    border-color: $primary-color;
-    box-shadow: none;
-  }
-
-  ::-webkit-input-placeholder {
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #bbbbbb;
-  }
-
-  :-moz-placeholder {
-    /* Firefox 18- */
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #bbbbbb;
-  }
-
-  ::-moz-placeholder {
-    /* Firefox 19+ */
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #bbbbbb;
-  }
-
-  :-ms-input-placeholder {
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #bbbbbb;
-  }
-
-  .text-danger {
-    color: #e74c3c;
-  }
-}
-
-footer {
-  padding: 25px 0;
-  text-align: center;
-
-  span.copyright {
-  line-height: 40px;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  text-transform: none;
-}
-
-  ul.quicklinks {
-  margin-bottom: 0;
-  line-height: 40px;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  text-transform: none;
-}
-}
-
-ul.social-buttons {
-  margin-bottom: 0;
-
-  li a {
-    display: block;
-    background-color: #222;
-    height: 40px;
-    width: 40px;
-    border-radius: 100%;
-    font-size: 20px;
-    line-height: 40px;
-    color: white;
-    outline: none;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-
-    a:hover,
-    a:focus, a:active {
-      background-color: $primary-color;
-    }
-  }
-}
+@import "members";
 
 .btn:focus,
 .btn:active,
 .btn.active,
 .btn:active:focus {
   outline: none;
-}
-
-.publications-modal {
-  .modal-content {
-    border-radius: 0;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: none;
-    min-height: 100%;
-    padding: 100px 0;
-    text-align: center;
-
-    h2 {
-      margin-bottom: 15px;
-      font-size: 3em;
-    }
-    p {
-      margin-bottom: 30px;
-    }
-    p.item-intro {
-      margin: 20px 0 30px;
-      font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-style: italic;
-      font-size: 16px;
-    }
-
-    ul.list-inline {
-      margin-bottom: 30px;
-      margin-top: 0;
-    }
-
-    img {
-      margin-bottom: 30px;
-    }
-  }
-
-  .close-modal {
-    position: absolute;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    top: 25px;
-    right: 25px;
-    cursor: pointer;
-
-    &:hover {
-      opacity: 0.3;
-    }
-
-    .lr {
-      height: 75px;
-      width: 1px;
-      margin-left: 35px;
-      background-color: #222;
-      transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      /* IE 9 */
-      -webkit-transform: rotate(45deg);
-      /* Safari and Chrome */
-      z-index: 1051;
-
-      .rl {
-        height: 75px;
-        width: 1px;
-        background-color: #222;
-        transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-        /* IE 9 */
-        -webkit-transform: rotate(90deg);
-        /* Safari and Chrome */
-        z-index: 1052;
-      }
-    }
-  }
-
-  .modal-backdrop {
-    opacity: 0;
-    display: none;
-  }
 }
 
 ::-moz-selection {
