--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-heading">We use machine learning to understand biology.</div>
+            <div class="intro-lead-in">Welcome to the CDS!</div>
+            <div class="intro-heading">Cancer Data Science at the Broad Institute</div>
             <a href="#projects" class="page-scroll btn btn-xl">Tell Me More</a>
         </div>
     </div>
