--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a id="morrislogo" class="navbar-brand page-scroll" href="#page-top"><img src="img/morris_lab_logo.svg"></a>
+            <a class="navbar-brand page-scroll" href="#page-top">Cancer Data Science</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
