--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Projects</h2>
+                <h2 class="section-heading">Main goals</h2>
+                <h3 class="section-subheading text-muted">We build models from our data to understand biology!</h3>
             </div>
         </div>
         <div class="row text-center">
