--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex">
     <title>{{ site.title }}</title>
 
     <!-- favicon -->
